@@ -7,16 +7,14 @@ import com.west.todoAPI.entities.Todo;
 import com.west.todoAPI.services.TodoService;
 import com.west.todoAPI.util.EntityDtoTransformer;
 import com.west.todoAPI.validator.TodoValidator;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.Mockito.when;
@@ -24,12 +22,12 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@RunWith(SpringRunner.class)
-@WebMvcTest
+@SpringBootTest
+@AutoConfigureMockMvc
 public class TodoApiApplicationTest {
 
 	@Autowired
-	MockMvc mockMvc;
+	private MockMvc mockMvc;
 
 	@MockBean
 	private TodoService todoService;
@@ -46,7 +44,7 @@ public class TodoApiApplicationTest {
 
 		TodoDto todoDto = EntityDtoTransformer.toDto(todo);
 
-		List<TodoDto> todos = Arrays.asList(todoDto);
+		List<TodoDto> todos = List.of(todoDto);
 		when(todoService.getTodos()).thenReturn(todos);
 
 		ObjectWriter objectWriter = new ObjectMapper().writer().withDefaultPrettyPrinter();
